Fix testimonial section verical spacing and html accesibility issue

--- a/social-proof-section/css/style.css
+++ b/social-proof-section/css/style.css
@@ -227,11 +227,11 @@ h4 {
   }
 
   .testimonial:nth-child(2) {
-    transform: translate(0, 32px);
+    transform: translate(0, 16px);
   }
 
   .testimonial:nth-child(3) {
-    transform: translate(0, 64px);
+    transform: translate(0, 32px);
   }
 
   .attribution {
